Fix #1040: Date overlapping icon on preference window after electron 27 (#1041)

--- a/css/styles.css
+++ b/css/styles.css
@@ -674,7 +674,6 @@ input:disabled + .slider {
 #preferences-window input[type="date"].date-right::-webkit-datetime-edit {
   text-align: right;
   position: relative;
-  left: 25px;
 }
 
 #preferences-window #hours-per-day, #break-time-interval {
